# jjs

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  appveyor.yml  sonar-project.properties
jerry-ext/: CMakeLists.txt
jjs-core/: CMakeLists.txt  config.h  libjjs-core.pc.in
jjs-core/annex/: annex-path.c  annex-util.c  annex.h
jjs-core/api/: jjs-annex-commonjs.c  jjs-annex-esm.c  jjs-annex-module-util.c  jjs-annex-module-util.h  jjs-annex-pmap.c  jjs-annex-task.c  jjs-annex-vmod.c  jjs-annex-vmod.h  jjs-annex.c  jjs-annex.h  jjs-api-object.c  jjs-api-object.h  jjs-api-snapshot.c  jjs-api-snapshot.h  jjs-context-init.c  jjs-debugger-transport.c  jjs-debugger.c  jjs-module.c  jjs-platform-stub.c  jjs-platform-unix.c  jjs-platform-win.c  jjs-platform.c  jjs-platform.h  jjs-snapshot.c  jjs-snapshot.h  jjs-stream.c  jjs-stream.h  jjs-util.c  jjs-util.h  jjs.c
jjs-core/debugger/: debugger.c  debugger.h
jjs-core/ecma/base/: ecma-alloc.c  ecma-alloc.h  ecma-error-messages.inc.h  ecma-error-messages.ini  ecma-errors.c  ecma-errors.h  ecma-extended-info.c  ecma-gc.c  ecma-gc.h  ecma-globals.h  ecma-helpers-collection.c  ecma-helpers-conversion.c  ecma-helpers-errol.c  ecma-helpers-external-pointers.c  ecma-helpers-number.c  ecma-helpers-number.h  ecma-helpers-string.c  ecma-helpers-value.c  ecma-helpers.c  ecma-helpers.h  ecma-init-finalize.c  ecma-init-finalize.h  ecma-lcache.c  ecma-lcache.h  ecma-line-info.c  ecma-line-info.h  ecma-literal-storage.c  ecma-literal-storage.h  ecma-module.c  ecma-module.h  ecma-property-hashmap.c  ecma-property-hashmap.h
jjs-core/ecma/builtin-objects/: ecma-builtin-aggregateerror.c  ecma-builtin-array-iterator-prototype.c  ecma-builtin-array-prototype.c  ecma-builtin-array-prototype.inc.h  ecma-builtin-array.c  ecma-builtin-array.inc.h  ecma-builtin-arraybuffer-prototype.c  ecma-builtin-arraybuffer-prototype.inc.h  ecma-builtin-arraybuffer.c  ecma-builtin-arraybuffer.inc.h  ecma-builtin-async-from-sync-iterator-prototype.c  ecma-builtin-async-function.c  ecma-builtin-async-generator-function.c  ecma-builtin-async-generator-prototype.c  ecma-builtin-async-iterator-prototype.c  ecma-builtin-atomics.c  ecma-builtin-atomics.inc.h  ecma-builtin-bigint-prototype.c  ecma-builtin-bigint-prototype.inc.h  ecma-builtin-bigint.c  ecma-builtin-bigint.inc.h  ecma-builtin-boolean-prototype.c  ecma-builtin-boolean-prototype.inc.h  (+119 more)
jjs-core/include/: jjs-compiler.h  jjs-context-init.h  jjs-core.h  jjs-debugger-transport.h  jjs-debugger.h  jjs-port.h  jjs-snapshot.h  jjs-types.h  jjs.h
jjs-core/jcontext/: jcontext.c  jcontext.h
jjs-core/jmem/: jmem-allocator-internal.h  jmem-allocator.c  jmem-cellocator.c  jmem-heap.c  jmem-poolman.c  jmem-scratch-allocator.c  jmem.h
jjs-core/jrt/: jrt-fatals.c  jrt-logging.c  jrt.h
jjs-core/lit/: lit-char-helpers.c  lit-char-helpers.h  lit-globals.h  lit-magic-strings.c  lit-magic-strings.h  lit-magic-strings.inc.h  lit-magic-strings.ini  lit-strings.c  lit-strings.h  lit-unicode-conversions-sup.inc.h  lit-unicode-conversions.inc.h  lit-unicode-folding.inc.h  lit-unicode-ranges-sup.inc.h  lit-unicode-ranges.inc.h
jjs-core/profiles/: README.md  minimal.profile
jjs-core/vm/: opcodes-ecma-arithmetics.c  opcodes-ecma-bitwise.c  opcodes-ecma-relational-equality.c  opcodes.c  opcodes.h  vm-defines.h  vm-stack.c  vm-stack.h  vm-utils.c  vm.c  vm.h
jjs-ext/: CMakeLists.txt  README.md  libjjs-ext.pc.in
jjs-ext/arg/: arg-internal.h  arg-js-iterator-helper.c  arg-transform-functions.c  arg.c
jjs-ext/common/: jext-common.h
jjs-ext/debugger/: debugger-common.c  debugger-rp.c  debugger-serial.c  debugger-sha1.c  debugger-sha1.h  debugger-tcp.c  debugger-ws.c
jjs-ext/handle-scope/: handle-scope-allocator.c  handle-scope-internal.h  handle-scope.c
jjs-ext/module/: module.c
jjs-ext/util/: handlers.c  print.c  properties.c  repl.c  sources.c  test262.c
jjs-main/: CMakeLists.txt  cmdline-unix.c  cmdline-win.c  cmdline.c  cmdline.h  imcl.h  main-cli.c  main-desktop-lib.c  main-desktop-lib.h  main-desktop.c  main-libfuzzer.c  main-module.c  main-module.h  main-snapshot.c  main-test262.c
jjs-main/arguments/: options.c  options.h
jjs-main/benchmark/: main-benchmark.c
jjs-main/debugger/: debugger-common.c  debugger-rp.c  debugger-serial.c  debugger-tcp.c  debugger-ws.c  debugger.h  jext-common.h
jjs-main/lib/: imcl.h  jjs-cli.h  jjs-test-runner.h
jjs-math/: CMakeLists.txt  acos.c  acosh.c  asin.c  asinh.c  atan.c  atan2.c  atanh.c  cbrt.c  ceil.c  copysign.c  cosh.c  exp.c  expm1.c  fabs.c  floor.c  fmod.c  jjs-math-internal.h  libjjs-math.pc.in  log.c  log10.c  log1p.c  log2.c  nextafter.c  pow.c  scalbn.c  sinh.c  sqrt.c  tanh.c  trig.c
jjs-math/include/: math.h
jjs-pack/: CMakeLists.txt  build.js  gen-pack-js.sh  jjs-pack-embed-js.template  libjjs-pack.pc.in  package.json
jjs-pack/console/: console.js  jjs-pack-console-js.c  jjs-pack-console.c
jjs-pack/domexception/: domexception.js  jjs-pack-domexception-js.c  jjs-pack-domexception.c
jjs-pack/fs/: fs.c  fs.h  jjs-pack-fs-js.c  jjs-pack-fs.c
jjs-pack/include/: jjs-pack-config.h  jjs-pack.h
jjs-pack/lib/: jjs-pack-lib-unix.c  jjs-pack-lib-win.c  jjs-pack-lib.c  jjs-pack-lib.h
jjs-pack/path/: jjs-pack-path-js.c  jjs-pack-path.c  path.cjs  path.js
jjs-pack/path-url/: jjs-pack-path-url-js.c  jjs-pack-path-url.c  path-url.js
jjs-pack/performance/: jjs-pack-performance-js.c  jjs-pack-performance.c  performance.cjs  performance.js
jjs-pack/text/: jjs-pack-text-api-js.c  jjs-pack-text-js.c  jjs-pack-text.c  text-api.js
jjs-pack/url/: get-core-js-url.sh  jjs-pack-url-api-js.c  jjs-pack-url-js.c  jjs-pack-url-search-params-js.c  jjs-pack-url.c  package.json  url-api-raw.js  url-api.js  url-search-params.js  url.cjs  url.js
jjs-port/: CMakeLists.txt  libjjs-port.pc.in
jjs-port/common/: jjs-port-context.c  jjs-port-fs.c  jjs-port-io.c  jjs-port-process.c
jjs-port/unix/: jjs-port-unix-date.c  jjs-port-unix-fs.c  jjs-port-unix-process.c
jjs-port/win/: jjs-port-win-date.c  jjs-port-win-fs.c  jjs-port-win-process.c
(+574 files in other folders)
